assets/css/app.scss
$non-mobile-min-width: 768px;
$mobile-max-width: $non-mobile-min-width - 1;
$tab-bar-width: 3rem;
$picker-width-narrow: 9.5rem;
$picker-width-wide: $picker-width-narrow + 3.1;

@import "base";
@import "inter_ui";
@import "ui_kit";
@import "leaflet";

@import "close_button";
@import "data_status_banner";
@import "disconnected_modal";
@import "incoming_box";
@import "ladder";
@import "ladder_page";
@import "layover_box";
@import "page";
@import "picker_container";
@import "properties_list";
@import "properties_panel";
@import "properties_panel/block_waiver_banner";
@import "properties_panel/close_button";
@import "properties_panel/ghost_properties_panel";
@import "properties_panel/header";
@import "properties_panel/headway_diagram";
@import "properties_panel/vehicle_properties_panel";
@import "recent_searches";
@import "route_ladder";
@import "route_ladders";
@import "route_picker";
@import "route_filter";
@import "search_form";
@import "search_page";
@import "search_results";
@import "shuttle_map";
@import "tab_bar";
@import "vehicle_icon";
@import "vehicle_map";

body {
  background-color: $color-bg-base;
  color: $color-font-dark;
  font-family: $font-family;
  font-size: 16px;
}

.m-app {
  height: 100vh;
  display: flex;
  flex-direction: column;
  width: 100vw;

  .__react_component_tooltip {
    border-radius: 4px;
    text-align: center;
  }
}

.m-app__banner {
  width: 100%;
  flex: 0 0 auto;
}

.m-app__main {
  display: flex;
  position: relative;
  flex: 1 1 auto;
  min-height: 0;
}

